--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,12 +1,14 @@
 <% layout ('layout') -%>
-<section id="top-section">
-	<h1 id="mainHeader">Campgrounds</h1>
-	<p>Create and view best campgrounds from all over the world</p>
-	<p>Start Today!</p>
-	<a class="btn btn-primary page-scroll" type="button" href="#campgrounds-page">View Campgrounds</a>
-</section>
+
 <section id="campgrounds-page">
 	<div class="container">
+		<div class="row">
+			<div class="jumbotron">
+				<h1 id="mainHeader">Campgrounds</h1>
+				<p class="lead-in text-muted">Create and view best campgrounds from all over the world</p>
+				<p class="lead-in text-muted">Start Today!</p>
+			</div>
+		</div>
 		<div id="campgrounds" class="row">
 			<div class="grid rig">
 				<% campgrounds.forEach(function(campground) { %>
