--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,11 +4,11 @@
 			<button type="button" class="navbar-toggle collapsed"  data-toggle="collapse" data-target="#navCollapsed" aria-expanded="false">
 				<span class="sr-only">Toggle-navigation</span> Menu <i class="fa fa-chevron-down" aria-hidden="true"></i>
 			</button>
-			<a class="navbar-brand page-scroll" href="#page-top"><img class="pull-left" src="/images/logo1.png" /></a>
+			<a class="navbar-brand page-scroll" href="/"><img class="pull-left" src="/images/logo1.png" /></a>
 		</div>
 		<div id="navCollapsed" class="collapse navbar-collapse">
 			<ul id="MainNav1" class="nav navbar-nav navbar-left">
-				<li><a class="page-scroll" href="#page-top">YelpCamp</a></li>
+				<li><a class="page-scroll" href="/">YelpCamp</a></li>
 				<li><a class="page-scroll" href="#campgrounds-page">Campgrounds</a></li>
 				<form id="searchForm" class="navbar-form navbar-left">
         			<div class="form-group">
