file upload finished, form completed

--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -46,6 +46,9 @@
                 <button type="button" class="btn btn-success" id="submitImage">Submit Image</button>
               </div>
             </div>
+            <div class="form-group">
+              <button type="submit" id="submitBtn" class="btn btn-success">Create new campground</button>
+            </div>
           </div>
         </form>
       </div>
