data is now fixed to be sent to backend part 2

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,7 +9,7 @@
 		<div id="navCollapsed" class="collapse navbar-collapse">
 			<ul id="MainNav1" class="nav navbar-nav navbar-left">
 				<li><a class="page-scroll" href="/">YelpCamp</a></li>
-				<li><a class="page-scroll" href="#campgrounds-page">Campgrounds</a></li>
+				<li><a class="page-scroll" href="/campgrounds">Campgrounds</a></li>
 				<form id="searchForm" class="navbar-form navbar-left">
         			<div class="form-group">
           				<input id="Search" type="text" class="form-control" placeholder="Search...">
