register and login added plus user to locals

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -2,7 +2,7 @@
 <section>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-8 col-md-offset-2">
 				<h1>Sign Up</h1>
 				<hr class="style-two" />
 				<form id="signUpForm" class="form-horizontal">
@@ -54,15 +54,6 @@
 						</div>
 						<span class="infoSpan" id="submitInfo"></span>
 					</div>
-				</form>
-			</div>
-			<div class="col-md-4">
-				<h1>Password recovery</h1>
-				<hr class="style-two">
-				<p>Forgot your password? <br> No worries, you can recover it here!</p>
-				<form action="/passwordrecover" method="POST">
-					<input class="form-control" type="email" name="email" placeholder="Enter your email here" />
-					<button class="btn btn-primary btn-block"><i class="fa fa-hand-o-right" aria-hidden="true"></i> Recover your Password</button>
 				</form>
 			</div>
 		</div>
