--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -31,6 +31,15 @@ section {
 }
 
 /* Header and text styles */
+p {
+  font-weight: 500;
+  letter-spacing: 1.1px;
+  line-height: 1em;
+  font-size: 18px;
+  font-family: sans-serif;
+  color: #333333;
+}
+
 #errorMsgUpload {
   font-size: 20px;
   line-height: 20px;
