--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,9 +15,8 @@
 	<!-- CSS libraries and custom css -->
 	<link rel="stylesheet" type="text/css" href="/libs/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/libs/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="/libs/cropper/dist/cropper.min.css">
+  	<link rel="stylesheet" type="text/css" href="/libs/cropper/dist/cropper.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/custom.css">
-	<link rel="stylesheet" type="text/css" href="/css/landing.css">
 
 </head>
 <body id="page-top">
@@ -27,7 +26,7 @@
 		<div class="container">
 			<div class="row">
       	<div class="jumbotron">
-      		<h1 id="mainHeader">Campgrounds</h1>
+      		<h1 id="mainHeader">YelpCamp</h1>
       		<p class="lead-in text-muted">Create and view best campgrounds from all over the world</p>
       		<p class="lead-in text-muted">Start Today!</p>
       	</div>
